--- a/public/audit-logs.html
+++ b/public/audit-logs.html
@@ -240,7 +240,9 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
+
+  
+  <script>
   // ========== إعداد المسارات ==========
   const API_BASE = location.hostname.endsWith('github.io') ? 'https://vdash-qkyv.onrender.com' : '';
   const api = (p)=> API_BASE + p;
@@ -276,7 +278,6 @@
   // ========== أدوات شبكة قوية ==========
   async function fetchJSON(url, options={}){
     const r = await fetch(url, { credentials:'include', headers:{'Accept':'application/json', ...(options.headers||{})}, ...options });
-    // إن عاد HTML (مثلاً صفحة تسجيل دخول) نُرجِع إشارة خاصة
     const ctype = (r.headers.get('content-type')||'').toLowerCase();
     if(!ctype.includes('application/json')){
       return { __nonJSON__: true, status: r.status };
@@ -302,7 +303,6 @@
   }
   async function ensureAdmin(){
     const meRes = await fetchJSON(api('/auth/committees/me'));
-    // إن عاد HTML → اعتبره غير مصادق
     if(meRes.__nonJSON__ || meRes.__badJSON__ || !meRes.ok){
       const rel = location.pathname + location.search + location.hash;
       location.href = api(`/committees-login.html?next=${encodeURIComponent(rel)}`);
@@ -337,7 +337,7 @@
   function badgeAction(a){ const cls = a==='delete'?'text-bg-danger':(a==='update'?'text-bg-warning':'text-bg-success'); return `<span class="badge ${cls}">${a||'—'}</span>`; }
   function fmtUser(uRaw){ const u=normalizeUser(uRaw); const email=u.email?` <span class="badge text-bg-light">${u.email}</span>`:''; const role=u.role?` <span class="badge text-bg-secondary">${u.role}</span>`:''; return `${u.name} <span class="badge text-bg-info">${u.username}</span>${email}${role}`; }
 
-  // ==== بقية توابع الـ diff كما لديك (مختصرة لأهم شيء) ====
+  // ==== diff helpers ====
   const colNameArMap={ committee_name:'اسم اللجنة', college:'الكلية', auditor_name:'المدقق', createdAt:'تاريخ الإنشاء', updatedAt:'تاريخ التحديث', notes:'ملاحظات', score:'النتيجة', work_plan:'خطة العمل', performance_indicators:'مؤشرات الاداء', meetings:'عدد الاجتماعات', consistency:'التوافق بين الدعوات والاجتماعات', coverage_books:'كتب التغطية', report1:'تقرير إنجاز 1', report2:'تقرير إنجاز 2', report3:'تقرير إنجاز 3', statistical_analysis:'التحليل الإحصائي', name:'الاسم', username:'اسم المستخدم', role:'الدور', email:'البريد', isActive:'الحالة', formation_decision:'قرار التشكيل', formationDecision:'قرار التشكيل', decision:'قرار التشكيل', decision_number:'قرار التشكيل', decisionNumber:'قرار التشكيل', formation_no:'قرار التشكيل', formationNo:'قرار التشكيل' };
   const toArabicLabel=(k)=> colNameArMap[k]||k;
   const escapeHtml=(s)=> String(s).replace(/[&<>"']/g, m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
@@ -346,39 +346,156 @@
   const roleAr = (r)=> r==='admin'?'مدير (admin)':'مستخدم (user)';
   function kv(label,val,key,diff,mode){ if(val==null||val==='') return ''; const cls=diff&&diff.has(key)?(mode==='before'?'diff-removed':'diff-added'):''; return `<dt>${label}</dt><dd class="${cls}">${escapeHtml(val)}</dd>`; }
   function userActiveBadge(val,key,diff,mode){ const is=!!val; const base=is?'<span class="badge text-bg-success">نشط</span>':'<span class="badge text-bg-danger">معطّل</span>'; const cls=diff&&diff.has(key)?(mode==='before'?'diff-removed':'diff-added'):''; return `<dt>الحالة</dt><dd class="${cls}">${base}</dd>`; }
+
   function renderCardFromObjectWithDiff(model,obj,diffKeys,mode,otherSide){
     if(!obj) return '<div class="payload-card text-muted">—</div>';
-    let h='<div class="payload-card"><dl class="row mb-0">', d=obj, has=(k)=> d[k]!=null && d[k]!=='';
-    if(model==='Evaluation'){ h+=kv('اسم اللجنة',d.committee_name,'committee_name',diffKeys,mode)+kv('الكلية',d.college,'college',diffKeys,mode)+kv('المدقق',d.auditor_name,'auditor_name',diffKeys,mode)+kv('تاريخ الإنشاء', d.createdAt?new Date(d.createdAt).toLocaleString('ar-EG'):'','createdAt',diffKeys,mode)+kv('النتيجة',d.score,'score',diffKeys,mode);
-      const decisionKey=['formation_decision','formationDecision','decision','decision_number','decisionNumber','formation_no','formationNo'].find(k=>k in d); if(decisionKey) h+=kv('قرار التشكيل', d[decisionKey], decisionKey, diffKeys, mode);
+    let h='<div class="payload-card"><dl class="row mb-0">', d=obj, has=(k)=> d[k]!=null && d[k]!=='';    
+    if(model==='Evaluation'){
+      h+=kv('اسم اللجنة',d.committee_name,'committee_name',diffKeys,mode)
+        +kv('الكلية',d.college,'college',diffKeys,mode)
+        +kv('المدقق',d.auditor_name,'auditor_name',diffKeys,mode)
+        +kv('تاريخ الإنشاء', d.createdAt?new Date(d.createdAt).toLocaleString('ar-EG'):'','createdAt',diffKeys,mode)
+        +kv('النتيجة',d.score,'score',diffKeys,mode);
+      const decisionKey=['formation_decision','formationDecision','decision','decision_number','decisionNumber','formation_no','formationNo'].find(k=>k in d);
+      if(decisionKey) h+=kv('قرار التشكيل', d[decisionKey], decisionKey, diffKeys, mode);
       ['work_plan','performance_indicators','meetings','consistency','coverage_books','report1','report2','report3','statistical_analysis'].forEach(k=>{ if(has(k)) h+=kv(toArabicLabel(k),d[k],k,diffKeys,mode); });
-    }else if(model==='College'||model==='Auditor'||model==='Committee'){ h+=kv(model==='College'?'الكلية':'المدقق'===model?'المدقق':'اسم اللجنة', d.name, 'name', diffKeys, mode);
-    }else if(model==='Settings'){ if(d.visibleColumns) h+=kv('الأعمدة المرئية',(d.visibleColumns||[]).map(toArabicLabel).join('، '),'visibleColumns',diffKeys,mode); if(d.selectedVisits) h+=kv('الزيارات المحددة',(d.selectedVisits||[]).map(toArabicLabel).join('، '),'selectedVisits',diffKeys,mode);
-    }else if(model==='User'){ if(has('name'))h+=kv('الاسم',d.name,'name',diffKeys,mode); if(has('username'))h+=kv('اسم المستخدم',d.username,'username',diffKeys,mode); if(has('email'))h+=kv('البريد',d.email,'email',diffKeys,mode); if(has('role'))h+=kv('الدور',roleAr(d.role),'role',diffKeys,mode); if('isActive' in d) h+=userActiveBadge(d.isActive,'isActive',diffKeys,mode);
+    }else if(model==='College' || model==='Auditor' || model==='Committee'){
+      const label = (model==='College') ? 'الكلية' : (model==='Auditor' ? 'المدقق' : 'اسم اللجنة');
+      h+=kv(label, d.name, 'name', diffKeys, mode);
+    }else if(model==='Settings'){
+      if(d.visibleColumns) h+=kv('الأعمدة المرئية',(d.visibleColumns||[]).map(toArabicLabel).join('، '),'visibleColumns',diffKeys,mode);
+      if(d.selectedVisits) h+=kv('الزيارات المحددة',(d.selectedVisits||[]).map(toArabicLabel).join('، '),'selectedVisits',diffKeys,mode);
+    }else if(model==='User'){
+      if(has('name'))h+=kv('الاسم',d.name,'name',diffKeys,mode);
+      if(has('username'))h+=kv('اسم المستخدم',d.username,'username',diffKeys,mode);
+      if(has('email'))h+=kv('البريد',d.email,'email',diffKeys,mode);
+      if(has('role'))h+=kv('الدور',roleAr(d.role),'role',diffKeys,mode);
+      if('isActive' in d) h+=userActiveBadge(d.isActive,'isActive',diffKeys,mode);
     }else{
-      h+='</dl><div class="payload-json"><code>'+escapeHtml(JSON.stringify(obj,null,2))+'</code></div></div>'; return h;
+      h+='</dl><div class="payload-json"><code>'+escapeHtml(JSON.stringify(obj,null,2))+'</code></div></div>'; 
+      return h;
     }
-    h+='</dl>'; if(!/<dd[^>]*>/.test(h)){ h+='<div class="payload-json"><code>'+escapeHtml(JSON.stringify(obj,null,2))+'</code></div>'; } h+='</div>'; return h;
+    h+='</dl>'; 
+    if(!/<dd[^>]*>/.test(h)){ h+='<div class="payload-json"><code>'+escapeHtml(JSON.stringify(obj,null,2))+'</code></div>'; } 
+    h+='</div>'; 
+    return h;
   }
+
+  // ========== كتلة عرض "التعديل الجماعي" ==========
+  function synthesizeBulkAfter(p){
+    if (!Array.isArray(p?.before)) return null;
+    const action=p?.action;
+    if (action==='activate')   return p.before.map(u=>({...u,isActive:true}));
+    if (action==='deactivate') return p.before.map(u=>({...u,isActive:false}));
+    if (action==='set-role')   return p.before.map(u=>({...u,role: p.role==='admin'?'admin':'user'}));
+    if (action==='delete')     return p.before.map(u=>({...u,_deleted:true}));
+    return null;
+  }
+
+  function renderBulkUsersList(p,mode){
+    const listBefore=Array.isArray(p?.before)?p.before:[];
+    const listAfter =Array.isArray(p?.after)?p.after:synthesizeBulkAfter(p);
+    const action=p?.action;
+    const idsCount=Array.isArray(p?.ids)?p.ids.length:0;
+
+    if(listBefore.length===0){
+      const actionAr = action==='set-role' ? `تغيير الدور إلى ${roleAr(p.role)}`
+                    : action==='activate' ? 'تفعيل المستخدمين'
+                    : action==='deactivate' ? 'تعطيل المستخدمين'
+                    : (action || 'تعديل جماعي');
+      return `<div class="payload-card"><dl class="row mb-0">
+        <dt>عملية جماعية</dt><dd>${escapeHtml(actionAr)} (عدد: ${idsCount||'—'})</dd>
+        <dt>ملاحظة</dt><dd class="text-muted">لتفاصيل الأسماء سجّل الخادم <code>payload.before</code> (ويُفضّل أيضًا <code>payload.after</code>).</dd>
+      </dl></div>`;
+    }
+
+    let noChanges=false;
+    if(listAfter && listAfter.length===listBefore.length){
+      if(action==='activate' || action==='deactivate'){
+        noChanges=listBefore.every((u,i)=> !!u.isActive === !!(listAfter[i]?.isActive));
+      }else if(action==='set-role'){
+        noChanges=listBefore.every((u,i)=> (u.role||'user') === ((listAfter[i]?.role)||'user'));
+      }
+    }
+
+    const rows=listBefore.map((u,i)=>{
+      const a=(listAfter && listAfter[i])||{};
+      const U=normalizeUser(u);
+      let cell='—';
+      if(action==='activate' || action==='deactivate'){
+        const is=(mode==='before')?!!u.isActive:!!a.isActive;
+        cell = is ? '<span class="badge text-bg-success">نشط</span>' : '<span class="badge text-bg-danger">معطّل</span>';
+        if(mode==='after'){ cell=(is?'<span class="diff-added">نشط</span>':'<span class="diff-removed">معطّل</span>')+` <span class="ms-1">${cell}</span>`; }
+      }else if(action==='set-role'){
+        const roleTxt = roleAr((mode==='before'?u.role:a.role));
+        cell = mode==='after' ? `<span class="diff-added">${roleTxt}</span>` : `<span class="diff-removed">${roleTxt}</span>`;
+      }else if(action==='delete'){
+        cell = mode==='after' ? '<span class="badge text-bg-danger">تم الحذف</span>' : roleAr(u.role);
+      }
+      return `<tr>
+        <td>${U.name} <span class="badge text-bg-info">${U.username}</span> ${U.email?`<span class="badge text-bg-light">${U.email}</span>`:''}</td>
+        <td class="text-nowrap">${cell}</td>
+      </tr>`;
+    }).join('');
+
+    const secondColTitle = (action==='set-role') ? 'الدور' : 'الحالة';
+    const title=(mode==='before')?`${secondColTitle} قبل`:`${secondColTitle} بعد`;
+    const headerRight=(mode==='after')?`<div class="d-flex align-items-center gap-2">${noChanges?'<span class="nochange-note">لا تغيير فعلي</span>':''}<span class="badge text-bg-light">عدد: ${idsCount || listBefore.length}</span></div>`:'';
+    const actionTitle=(action==='set-role')?('تغيير الدور → '+roleAr(p.role)):(action==='activate'?'تفعيل':(action==='deactivate'?'تعطيل':(action||'—')));
+
+    return `<div class="payload-card">
+      <div class="d-flex justify-content-between align-items-center mb-2">
+        <div>${mode==='after'?('<strong>عملية جماعية:</strong> '+actionTitle):''}</div>
+        ${headerRight}
+      </div>
+      <div class="table-responsive">
+        <table class="table table-sm mb-0">
+          <thead class="table-light"><tr><th>المستخدم</th><th>${title}</th></tr></thead>
+          <tbody>${rows}</tbody>
+        </table>
+      </div>
+    </div>`;
+  }
+
+  // ========== before/after ==========
+  function isBulkUserPayload(log){
+    const p = log.payload || {};
+    return log.model==='User' && (p.bulk || Array.isArray(p.before) || Array.isArray(p.after) || Array.isArray(p.ids));
+  }
+
   function renderSettingsDiff(before,after,mode){
     const list=(arr)=> (Array.isArray(arr)&&arr.length)?arr.map(toArabicLabel).join('، '):'—';
     return `<div class="payload-card"><dl class="row mb-0"><dt>الأعمدة المرئية</dt><dd>${list((mode==='before'?before:after)?.visibleColumns)}</dd><dt>الزيارات المحددة</dt><dd>${list((mode==='before'?before:after)?.selectedVisits)}</dd></dl></div>`;
   }
+
   function renderBeforeCell(log){
     const p=log.payload||{};
-    if(log.model==='Settings'){ if(log.action==='create') return '<div class="payload-card text-muted">كانت فارغة</div>'; if(log.action==='delete') return renderSettingsDiff(p,{},'before'); if(p.before&&p.after) return renderSettingsDiff(p.before,p.after,'before'); if(p.before) return renderSettingsDiff(p.before,{},'before'); return '<div class="payload-card text-muted">—</div>'; }
-    if(log.model==='User' && p && p.bulk){ return '<div class="payload-card text-muted">—</div>'; }
+    if(log.model==='Settings'){
+      if(log.action==='create') return '<div class="payload-card text-muted">كانت فارغة</div>';
+      if(log.action==='delete') return renderSettingsDiff(p,{},'before');
+      if(p.before&&p.after)     return renderSettingsDiff(p.before,p.after,'before');
+      if(p.before)              return renderSettingsDiff(p.before,{},'before');
+      return '<div class="payload-card text-muted">—</div>';
+    }
+    if(isBulkUserPayload(log)) return renderBulkUsersList(p,'before');
     if(log.action==='create') return '<div class="payload-card text-muted">كانت فارغة</div>';
     if(log.action==='delete'){ const ks=p?new Set(Object.keys(p)):new Set(); return renderCardFromObjectWithDiff(log.model,p,ks,'before',{}); }
     if(p.before&&p.after){ const diff=computeDiffKeys(p.before,p.after); return renderCardFromObjectWithDiff(log.model,p.before,diff,'before',p.after); }
     if(p.before){ return renderCardFromObjectWithDiff(log.model,p.before,null,'before',{}); }
     return '<div class="payload-card text-muted">—</div>';
   }
+
   function renderAfterCell(log){
     const p=log.payload||{};
-    if(log.model==='Settings'){ if(log.action==='delete') return '<div class="payload-card text-muted">تم الحذف</div>'; if(log.action==='create') return renderSettingsDiff({},p,'after'); if(p.before&&p.after) return renderSettingsDiff(p.before,p.after,'after'); if(p.after) return renderSettingsDiff({},p.after,'after'); return renderSettingsDiff({},p,'after'); }
-    if(log.model==='User' && p && p.bulk){ return '<div class="payload-card text-muted">—</div>'; }
-    if(log.action==='delete') return '<div class="payload-card text-muted">تم الحذف</div>';
+    if(log.model==='Settings'){
+      if(log.action==='delete') return '<div class="payload-card text-muted">تم الحذف</div>';
+      if(log.action==='create') return renderSettingsDiff({},p,'after');
+      if(p.before&&p.after)     return renderSettingsDiff(p.before,p.after,'after');
+      if(p.after)               return renderSettingsDiff({},p.after,'after');
+      return renderSettingsDiff({},p,'after');
+    }
+    if(isBulkUserPayload(log)) return renderBulkUsersList(p,'after');
+    if(log.action==='delete')  return '<div class="payload-card text-muted">تم الحذف</div>';
     if(log.action==='create'){ const ks=p?new Set(Object.keys(p)):new Set(); return renderCardFromObjectWithDiff(log.model,p,ks,'after',{}); }
     if(p.after&&p.before){ const diff=computeDiffKeys(p.before,p.after); return renderCardFromObjectWithDiff(log.model,p.after,diff,'after',p.before); }
     if(p.after){ return renderCardFromObjectWithDiff(log.model,p.after,null,'after',{}); }
@@ -409,7 +526,6 @@
     if(res.__nonJSON__ || res.__badJSON__ || !res.ok){
       tbody.innerHTML = `<tr class="text-center text-danger"><td colspan="8">انتهت الجلسة أو تعذّر الاتصال. يُرجى تسجيل الدخول.</td></tr>`;
       setToast(toastError, 'تعذّر جلب السجلات (جلسة منتهية/توجيه HTML)'); toastError.show();
-      // إعادة توجيه لطيفة
       setTimeout(()=>{
         const rel = location.pathname + location.search + location.hash;
         location.href = api(`/committees-login.html?next=${encodeURIComponent(rel)}`);
@@ -454,8 +570,6 @@
   // ========== تشغيل ==========
   ensureAdmin().then(()=>loadLogs({append:false}));
 </script>
-
-
 
 </body>
 </html>
